<resources>
    <string name="app_name">LTM</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="welcome_back">Welcome back</string>
    <string name="sign_up">Sign up</string>
    <string name="confirm_password">Confirm password</string>
    <string name="new_user">New user?</string>
    <string name="sign_in">Sign in</string>
    <string name="waiting">Waiting...</string>
    <string name="passwords_mismatch">Please make sure your passwords match</string>
    <string name="welcome">Welcome\nto\nMesejing</string>
    <string name="lets_go">Let\'s go</string>
    <string name="recent_chat">Recent Chats</string>
    <string name="video_call">Video Calls</string>
    <string name="friend">Friend</string>
    <string name="profile">Profile</string>
    <string name="recent_chats">Recent Chats</string>
    <string name="new_group">New group</string>
    <string name="search_conversation_hint">Name conversation</string>
    <string name="search_profile_hint">Name profile</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="error_create_group">Error when create group</string>
    <string name="error">Error</string>
    <string name="feature_develop">Feature call video is developing</string>
    <string name="conversation">Conversation</string>
    <string name="developing">Feature developing</string>
    <string name="user_name">User name</string>
    <string name="name_group">Name group</string>
    <string name="error_group">Conversation must be more than 2 members</string>
    <string name="bio">Bio</string>
    <string name="members">Members</string>
    <string name="peoples">%d Peoples</string>
    <string name="save">Save</string>
    <string name="remove">Remove</string>
</resources>