<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_rectangle_conner_20dp"
    android:elevation="10dp"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp">

    <ImageView
        android:id="@+id/imgDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="20dp"
        android:textColor="@color/purple_500"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imgDialog"
        tools:text="Error"
        android:textSize="24sp"
        android:textStyle="bold"
        android:gravity="center"/>

    <EditText
        android:id="@+id/edtInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:lines="2"
        android:maxLines="2"
        android:textSize="14sp"
        android:paddingHorizontal="15dp"
        android:layout_marginHorizontal="20dp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtTitle"
        tools:hint="@string/name_group"
        android:paddingVertical="5dp"
        android:background="@drawable/bg_rectangle_stroke_conner_10dp"/>

    <TextView
        android:id="@+id/txtError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/edtInput"
        app:layout_constraintTop_toBottomOf="@+id/edtInput"
        android:layout_marginStart="15dp"
        android:textSize="12sp"
        android:textColor="@color/red"
        tools:text="error"
        android:maxLines="1"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/txtPositive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="15dp"
        android:paddingHorizontal="30dp"
        android:paddingVertical="10dp"
        android:text="@string/ok"
        android:textSize="14sp"
        android:textAllCaps="true"
        android:textColor="@color/purple_500"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/txtNegative"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtInput" />

    <TextView
        android:id="@+id/txtNegative"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="15dp"
        android:paddingHorizontal="30dp"
        android:paddingVertical="10dp"
        android:text="@string/cancel"
        android:textAllCaps="true"
        android:textColor="@color/purple_500"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/txtPositive"
        app:layout_constraintTop_toBottomOf="@id/edtInput" />


</androidx.constraintlayout.widget.ConstraintLayout>